fix problem with maven plugins