@@ -13,6 +13,8 @@
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+
+        <spring-boot-for-e2e.version>3.2.2</spring-boot-for-e2e.version>
     </properties>
 
 
@@ -21,7 +23,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.2.2</version>
+                <version>${spring-boot-for-e2e.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -63,15 +65,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
+                <version>${spring-boot-for-e2e.version}</version>
             </plugin>
         </plugins>
     </build>
